build.log

==============================================
START : FUNC_BUILD_KERNEL
==============================================

build common config=exynos9820-beyondx_defconfig 
build model config= 
#
# configuration written to .config
#
scripts/kconfig/conf  --silentoldconfig Kconfig
  CHK     include/config/kernel.release
  CHK     include/generated/uapi/linux/version.h
  CHK     include/generated/utsrelease.h
  CHK     scripts/mod/devicetable-offsets.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CHK     include/generated/asm-offsets.h
  CALL    scripts/checksyscalls.sh
kperfmon_DUMMY="olog.pb.h file is missing... retrying"
kperfmon_DUMMY=""
kperfmon_DUMMY=""
kperfmon_DUMMY=""
kperfmon_DUMMY=""
kperfmon_DUMMY="olog.pb.h file is missing... again"
kperfmon_DUMMY="perflog.h file is missing."
kperfmon_DUMMY=""
kperfmon_DUMMY=""
  CHK     include/generated/compile.h
  CC      kernel/fork.o
  CC      kernel/exec_domain.o
  CC      kernel/panic.o
In file included from kernel/fork.c:67:
In file included from ./include/linux/ksm.h:121:
./include/linux/uksm.h:19:22: error: section attribute is specified on redeclared variable [-Werror,-Wsection]
extern unsigned long zero_pfn __read_mostly;
                     ^
./include/asm-generic/pgtable.h:818:23: note: previous declaration is here
        extern unsigned long zero_pfn;
                             ^
In file included from kernel/fork.c:67:
In file included from ./include/linux/ksm.h:121:
./include/linux/uksm.h:20:22: error: section attribute is specified on redeclared variable [-Werror,-Wsection]
extern unsigned long uksm_zero_pfn __read_mostly;
                     ^
./include/asm-generic/pgtable.h:795:23: note: previous declaration is here
        extern unsigned long uksm_zero_pfn;
                             ^
  AR      certs/built-in.o
  CC      mm/filemap.o
2 errors generated.
scripts/Makefile.build:356: recipe for target 'kernel/fork.o' failed
make[1]: *** [kernel/fork.o] Error 1
make[1]: *** Waiting for unfinished jobs....
  CC      mm/mempool.o
Makefile:1161: recipe for target 'kernel' failed
make: *** [kernel] Error 2
make: *** Waiting for unfinished jobs....
  CC      mm/oom_kill.o
  CC      mm/maccess.o
  CC      mm/page_alloc.o
  CC      mm/page-writeback.o
  CC      mm/readahead.o
  CC      mm/swap.o
  CC      mm/truncate.o
  CC      mm/vmscan.o
  CC      mm/shmem.o
  CC      mm/util.o
  CC      mm/mmzone.o
  CC      mm/vmstat.o
  CC      mm/backing-dev.o
  CC      mm/mm_init.o
  CC      mm/mmu_context.o
  CC      mm/percpu.o
  CC      mm/slab_common.o
  CC      mm/compaction.o
  CC      mm/vmacache.o
  CC      mm/swap_slots.o
  CC      mm/interval_tree.o
  CC      mm/list_lru.o
  CC      mm/workingset.o
  CC      mm/debug.o
  CC      mm/gup.o
  CC      mm/highmem.o
  CC      mm/memory.o
  CC      mm/mincore.o
In file included from mm/memory.c:53:
In file included from ./include/linux/ksm.h:121:
./include/linux/uksm.h:19:22: error: section attribute is specified on redeclared variable [-Werror,-Wsection]
extern unsigned long zero_pfn __read_mostly;
                     ^
./include/asm-generic/pgtable.h:818:23: note: previous declaration is here
        extern unsigned long zero_pfn;
                             ^
In file included from mm/memory.c:53:
In file included from ./include/linux/ksm.h:121:
./include/linux/uksm.h:20:22: error: section attribute is specified on redeclared variable [-Werror,-Wsection]
extern unsigned long uksm_zero_pfn __read_mostly;
                     ^
./include/asm-generic/pgtable.h:795:23: note: previous declaration is here
        extern unsigned long uksm_zero_pfn;
                             ^
  CC      mm/mlock.o
2 errors generated.
scripts/Makefile.build:356: recipe for target 'mm/memory.o' failed
make[1]: *** [mm/memory.o] Error 1
make[1]: *** Waiting for unfinished jobs....
Makefile:1161: recipe for target 'mm' failed
make: *** [mm] Error 2
